# drive-sync-to-s3

./: .gitignore  README.md  pyproject.toml
examples/: mock-changes.json
lambda/: app.py
lambda_build/charset_normalizer-3.4.4.dist-info/: RECORD
lambda_build/google_auth_oauthlib-1.2.3.dist-info/: RECORD
lambda_build/rsa-4.9.1.dist-info/: RECORD
scripts/: download_file.py  get_refresh_token.py  list_changes.py  sync_changes_to_s3.py
src/drivesync/: cli.py
src/drivesync_to_s3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
